# obsidian

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  rust_out
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-28-adversarial-review-fixes.md
src/: config.rs  lib.rs  main.rs  server.rs  snapshot.rs
src/api/: catalog.rs  diagnose.rs  health.rs  metadata.rs  mod.rs  openapi.rs  reset.rs  services.rs  status.rs  summary.rs
src/ingest/: label.rs  loki.rs  mod.rs  otlp_logs.rs  otlp_metrics.rs  otlp_traces.rs  remote_write.rs
src/query/: mod.rs
src/query/logql/: eval.rs  handlers.rs  mod.rs  parser.rs
src/query/promql/: eval.rs  handlers.rs  mod.rs
src/query/traceql/: eval.rs  handlers.rs  mod.rs  parser.rs
src/store/: log_store.rs  metric_store.rs  mod.rs  posting_list.rs  trace_store.rs
tests/: e2e_otlp.rs  e2e_python.py  e2e_smoke.rs  test_diagnose_and_query_gaps.rs  test_integration_bugfixes.rs  test_logql_pipelines_hints_acks.rs  test_loki_ingest_and_query.rs  test_multi_service.rs  test_otlp_ingest_and_promql.rs  test_otlp_ingest_and_traceql.rs  test_otlp_invalid_ids.rs  test_otlp_logs_diagnose_topk.rs  test_p0_p1_batch1.rs  test_p2_features.rs  test_post_queries_catalog_snapshots.rs  test_promql_funcs_memory_traceql_agg.rs  test_regression.rs  test_review_fixes.rs  test_services_endpoint.rs  test_step_validation.rs  test_timestamps_gzip_config_limits.rs  test_trace_grouping_grafana_compat.rs
tests/helpers/: mod.rs
