[package]
name = "obsidian"
version = "0.1.0"
edition = "2021"

[lib]
name = "obsidian"
path = "src/lib.rs"

[[bin]]
name = "obsidian"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
lasso = { version = "0.7", features = ["serialize"] }
promql-parser = "0.4"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic-messages"] }
prost = "0.13"
nom = "7"
regex = "1"
bincode = "1"
snap = "1"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
bytes = "1"
http = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
